<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/phone_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/browse_image" />

        <Button
            android:id="@+id/browse_image"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="12dp"
            android:text="@string/browse_image_btn"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/phone_name_editer" />

            <EditText
                android:id="@+id/edit_phone_name"
                style="@style/EditorFieldStyle"
                android:inputType="textCapWords" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/quantity_editer" />

            <ImageView
                android:id="@+id/less_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:background="@color/colorPrimary"
                android:padding="6dp"
                android:src="@drawable/ic_remove" />

            <EditText
                android:id="@+id/quantity_editer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4" />

            <ImageView
                android:id="@+id/more_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="6dp"
                android:src="@drawable/ic_add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/quantity_sold_editer" />

            <EditText
                android:id="@+id/edit_quantity_sold"
                style="@style/EditorFieldStyle"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/phone_price_editer" />

            <EditText
                android:id="@+id/edit_phone_price"
                style="@style/EditorFieldStyle"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/supplier_email_editer" />

            <EditText
                android:id="@+id/edit_supplier_email"
                style="@style/EditorFieldStyle"
                android:inputType="textCapWords" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/description_editer" />

            <EditText
                android:id="@+id/edit_phone_description"
                style="@style/EditorFieldStyle"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/restock_phone_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/restock_btn"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/delete_phone_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/colorPrimary"
                android:text="@string/delete_btn"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/save_phone_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/save_btn"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>